# pp-EnKF

./: .gitmodules  AUTHORS  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  test_on_wisteria.yml
docker/: Dockerfile
lib/: CMakeLists.txt  Cuda_FFT.hpp  Cuda_Helper.hpp  Cuda_Random.hpp  Cuda_Transpose.hpp  FFT.hpp  HIP_FFT.hpp  HIP_Helper.hpp  HIP_Random.hpp  Index.hpp  Iteration.hpp  OpenMP_FFT.hpp  OpenMP_Random.hpp  OpenMP_Transpose.hpp  Random.hpp  Transpose.hpp  cuda_linalg.hpp  hip_linalg.hpp  linalg.hpp  openmp_linalg.hpp
lib/executors/: CMakeLists.txt  Parallel_For.hpp  Parallel_Reduce.hpp  Transpose.hpp  View.hpp  linalg.hpp  numpy_like.hpp
lib/stdpar/: CMakeLists.txt  Parallel_For.hpp  Parallel_Reduce.hpp  Transpose.hpp  View.hpp  linalg.hpp  numpy_like.hpp
lib/sycl/: CMakeLists.txt  Parallel_For.hpp  Transpose.hpp  View.hpp  numpy_like.hpp
lib/utils/: CMakeLists.txt  commandline_utils.hpp  device_utils.hpp  file_utils.hpp  io_utils.hpp  mpi_utils.hpp  string_utils.hpp  system_utils.hpp
mini-apps/: CMakeLists.txt
mini-apps/heat3d/: CMakeLists.txt  config.hpp  parser.hpp  types.hpp
mini-apps/heat3d-mpi/: CMakeLists.txt  config.hpp  parser.hpp  timer.hpp
mini-apps/heat3d-mpi/executors/: CMakeLists.txt  functors.hpp  grid.hpp  heat3D.cpp  heat3D.hpp  mpi_comm.hpp  variable.hpp
mini-apps/heat3d-mpi/stdpar/: CMakeLists.txt  functors.hpp  grid.hpp  heat3D.cpp  heat3D.hpp  mpi_comm.hpp  variable.hpp
mini-apps/heat3d-mpi/sycl/: CMakeLists.txt  functors.hpp  grid.hpp  heat3D.cpp  heat3D.hpp  mpi_comm.hpp  variable.hpp
mini-apps/heat3d-mpi/thrust/: CMakeLists.txt  heat3D.cpp  heat3D.hpp  mpi_comm.hpp  variable.hpp
mini-apps/heat3d/executors/: CMakeLists.txt  config.hpp  grid.hpp  heat3D.cpp  heat3D.hpp  types.hpp  variable.hpp
mini-apps/heat3d/stdpar/: CMakeLists.txt  grid.hpp  heat3D.cpp  heat3D.hpp  types.hpp  variable.hpp
mini-apps/heat3d/sycl/: CMakeLists.txt  grid.hpp  heat3D.cpp  heat3D.hpp  variable.hpp
mini-apps/heat3d/thrust/: CMakeLists.txt  grid.hpp  heat3D.cpp  heat3D.hpp  variable.hpp
mini-apps/heat3d_mpi/stdpar/: CMakeLists.txt  config.hpp  grid.hpp  types.hpp  utils.hpp
mini-apps/lbm2d-letkf/: CMakeLists.txt  config.hpp  da_functors.hpp  functors.hpp  io_config.hpp  mpi_config.hpp  timer.hpp
mini-apps/lbm2d-letkf/executors/: CMakeLists.txt  da_models.hpp  data_vars.hpp  force.hpp  lbm2d.hpp  lbm2d_letkf.cpp  letkf.hpp  letkf_solver.hpp  model_factories.hpp  models.hpp  nudging.hpp  solver.hpp  types.hpp
mini-apps/lbm2d-letkf/stdpar/: CMakeLists.txt  da_models.hpp  force.hpp  lbm2d.hpp  letkf.hpp  letkf_solver.hpp  model_factories.hpp  models.hpp  nudging.hpp  solver.hpp  types.hpp
mini-apps/lbm2d-letkf/sycl/: CMakeLists.txt  da_models.hpp  data_vars.hpp  force.hpp  lbm2d.hpp  lbm2d_letkf.cpp  letkf.hpp  letkf_solver.hpp  model_factories.hpp  models.hpp  nudging.hpp  solver.hpp  types.hpp
mini-apps/lbm2d-letkf/thrust/: CMakeLists.txt  da_models.hpp  force.hpp  lbm2d.hpp  letkf.hpp  letkf_solver.hpp  models.hpp  nudging.hpp  solver.hpp  types.hpp
mini-apps/vlp4d/: config.hpp  timer.hpp
mini-apps/vlp4d/executors/: CMakeLists.txt  advection.hpp  diags.hpp  efield.hpp  field.hpp  init.cpp  timestep.hpp  types.hpp  vlp4d.cpp
mini-apps/vlp4d/stdpar/: CMakeLists.txt  advection.hpp  diags.cpp  diags.hpp  efield.cpp  field.cpp  field.hpp  init.hpp  types.hpp
mini-apps/vlp4d/sycl/: CMakeLists.txt  advection.hpp  diags.cpp  diags.hpp  efield.cpp  efield.hpp  field.cpp  field.hpp  init.cpp  init.hpp  timestep.hpp  types.hpp  vlp4d.cpp
mini-apps/vlp4d/thrust/: CMakeLists.txt  advection.hpp  diags.cpp  efield.cpp  efield.hpp  field.cpp  init.cpp  timestep.hpp  vlp4d.cpp
tests/: CMakeLists.txt
tests/executors/: CMakeLists.txt  Types.hpp  test_fft.cpp  test_linalg.cpp  test_numpy_like.cpp  test_stream_sender.cpp  test_transpose.cpp  test_view.cpp
tests/stdpar/: CMakeLists.txt  Types.hpp  test_fft.cpp  test_linalg.cpp  test_numpy_like.cpp  test_transpose.cpp  test_view.cpp
tests/sycl/: CMakeLists.txt  Test_Helper.hpp  Types.hpp  test_fft.cpp  test_linalg.cpp  test_numpy_like.cpp  test_transpose.cpp  test_view.cpp
tutorial/: CMakeLists.txt
tutorial/01_hello_world/: CMakeLists.txt  README.md  main.cpp
tutorial/02_hello_world_nvexec/: CMakeLists.txt  main.cpp
tutorial/03_mdspan_nvexec/: CMakeLists.txt  main.cpp
tutorial/04_stream/: CMakeLists.txt  stream.cpp  stream.hpp
tutorial/05_heat2d/: CMakeLists.txt  heat2D.cpp  heat2D.hpp  types.hpp
tutorial/06_sender_from_function/: CMakeLists.txt  heat2D.cpp  heat2D.hpp  types.hpp
tutorial/07_heat2d_repeat_n/: CMakeLists.txt  heat2D.cpp  heat2D.hpp  repeat_n.hpp
tutorial/08_test_overlapping/: CMakeLists.txt  benchmark.cpp  benchmark.hpp  config.hpp  timer.hpp  types.hpp
wk/: letkf.json  letkf_256.json  letkf_256_time.json  letkf_512.json  letkf_512_time.json  letkf_768.json  letkf_768_time.json  letkf_async_256.json  letkf_async_256_time.json  letkf_async_512.json  letkf_async_512_time.json  letkf_async_768.json  letkf_async_768_time.json  nature.json  nature_256.json  nature_512.json  nature_768.json  no_da.json  no_da_256.json  nudging.json  nudging_256.json  nudging_512.json  sub_aquarius.sh  sub_aquarius_mpi.sh  sub_executors_heat3d_mpi_A100.sh  sub_executors_heat3d_mpi_time_stamps_A100.sh  sub_executors_heat3d_mpi_time_stamps_A100_16GPUs.sh  sub_executors_heat3d_mpi_time_stamps_A100_32GPUs.sh  sub_executors_heat3d_mpi_time_stamps_A100_48GPUs.sh  sub_executors_heat3d_mpi_time_stamps_A100_64GPUs.sh  sub_executors_heat3d_mpi_time_stamps_Icelake.sh  sub_executors_heat3d_mpi_time_stamps_Icelake_12CPUs.sh  sub_executors_heat3d_mpi_time_stamps_Icelake_16CPUs.sh  sub_executors_heat3d_mpi_time_stamps_Icelake_4CPUs.sh  sub_executors_heat3d_mpi_time_stamps_Icelake_8CPUs.sh  sub_executors_lbm2d_A100.sh  sub_executors_lbm2d_letkf_A100.sh  sub_executors_lbm2d_letkf_async_A100.sh  sub_executors_lbm2d_letkf_time_stamps_A100.sh  sub_executors_lbm2d_letkf_time_stamps_A100_16GPUs.sh  (+36 more)
