add_library(math_lib INTERFACE)
if(PROGRAMMING_MODEL STREQUAL "STDPAR")
    add_subdirectory(stdpar)
elseif(PROGRAMMING_MODEL STREQUAL "EXECUTORS")
    add_subdirectory(executors)
else()
    add_subdirectory(stdpar)
    add_subdirectory(executors)
endif()
add_subdirectory(utils)
target_include_directories(math_lib INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
