add_library(math_lib INTERFACE)
if(PROGRAMMING_MODEL STREQUAL "STDPAR")
    add_subdirectory(stdpar)
elseif(PROGRAMMING_MODEL STREQUAL "SYCL")
    add_subdirectory(sycl)
elseif((PROGRAMMING_MODEL STREQUAL "EXECUTORS") OR (PROGRAMMING_MODEL STREQUAL "THRUST"))
    add_subdirectory(executors)
else()
    add_subdirectory(stdpar)
    add_subdirectory(executors)
endif()
if(${CMAKE_CXX_COMPILER_ID} STREQUAL NVHPC)
    # with NVHPC, mdspan warns a lot. Need to suppress warnings in order to perform build testing on github.
    target_compile_options(math_lib INTERFACE --diag_suppress=useless_using_declaration)
endif()
add_subdirectory(utils)
target_include_directories(math_lib INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
