if(APPLICATION STREQUAL "heat3d")
    add_subdirectory(heat3d)
elseif(APPLICATION STREQUAL "heat3d-mpi")
    add_subdirectory(heat3d-mpi)
elseif(APPLICATION STREQUAL "vlp4d")
    add_subdirectory(vlp4d)
else()
    # Default: all mini-apps
    add_subdirectory(heat3d)
    add_subdirectory(heat3d-mpi)
    add_subdirectory(vlp4d)
endif()
