add_subdirectory(01_hello_world)
add_subdirectory(02_hello_world_nvexec)
add_subdirectory(03_mdspan_nvexec)
add_subdirectory(04_stream)
add_subdirectory(05_heat2d)
add_subdirectory(06_sender_from_function)
add_subdirectory(07_heat2d_repeat_n)
if(BACKEND STREQUAL "CUDA")
    add_subdirectory(08_test_overlapping)
endif()
