set(BACKEND AUTO CACHE STRING "CHOICE OF PARALLEL BACKEND")

if(BACKEND STREQUAL "CUDA")
    find_package(CUDAToolkit REQUIRED COMPONENTS cufft culbas curand cusolver)
    target_link_libraries(math_lib INTERFACE CUDA::cufft CUDA::cublas CUDA::curand CUDA::cusolver)
    target_compile_definitions(math_lib INTERFACE ENABLE_CUDA)
elseif(BACKEND STREQUAL "HIP")
    find_package(HIP REQUIRED)
    find_package(rocthrust REQUIRED)
    find_package(rocfft REQUIRED)
    find_package(rocblas REQUIRED)
    find_package(rocsolver REQUIRED)
    find_package(rocrand REQUIRED)
    target_link_libraries(math_lib INTERFACE hip::device roc::rocfft roc::rocblas roc::rocsolver roc::rocrand)
    target_compile_definitions(math_lib INTERFACE ENABLE_HIP)
elseif(BACKEND STREQUAL "OPENMP")
    find_package(OpenMP REQUIRED)
    find_package(FFTW REQUIRED COMPONENTS DOUBLE_LIB)
    target_link_libraries(math_lib INTERFACE OpenMP::OpenMP_CXX fftw3)
    target_compile_definitions(math_lib INTERFACE ENABLE_OPENMP THRUST_DEVICE_SYSTEM=THRUST_DEVICE_SYSTEM_OMP)
    if(${CMAKE_CXX_COMPILER_ID} STREQUAL NVHPC)
        # with NVHPC, Eigen warns a lot. Need to suppress warnings in order to perform build testing on github.
        target_compile_options(math_lib INTERFACE --diag_suppress=subscript_out_of_range,integer_sign_change,incompatible_vectors_conversion,code_is_unreachable)
    endif()
else()
    message(FATAL_ERROR "No parallel backend specified. One of CUDA, HIP, and OPENMP must be On.")
endif()

# Compiler versions
target_link_libraries(math_lib INTERFACE std::mdspan)
