if(PROGRAMMING_MODEL STREQUAL "STDPAR")
    add_subdirectory(stdpar)
elseif(PROGRAMMING_MODEL STREQUAL "EXECUTORS")
    add_subdirectory(executors)
elseif(PROGRAMMING_MODEL STREQUAL "THRUST")
    add_subdirectory(thrust)
else()
    add_subdirectory(stdpar)
    add_subdirectory(executors)
    add_subdirectory(thrust)
endif()
