add_executable(05_heat_test heat2D.cpp)
target_link_libraries(05_heat_test PUBLIC Threads::Threads STDEXEC::stdexec STDEXEC::nvexec std::mdspan)
target_compile_features(05_heat_test PUBLIC cxx_std_20)

set(BACKEND AUTO CACHE STRING "CHOICE OF PARALLEL BACKEND")
if(BACKEND STREQUAL "OPENMP")
    find_package(OpenMP REQUIRED)
    target_link_libraries(05_heat_test PUBLIC OpenMP::OpenMP_CXX)
    target_compile_definitions(05_heat_test PUBLIC ENABLE_OPENMP THRUST_DEVICE_SYSTEM=THRUST_DEVICE_SYSTEM_OMP)
endif()
