add_executable(heat3d-executors heat3D.cpp)
target_link_libraries(heat3d-executors PUBLIC Threads::Threads STDEXEC::stdexec STDEXEC::nvexec std::mdspan)
target_compile_features(heat3d-executors PUBLIC cxx_std_20)

set(BACKEND AUTO CACHE STRING "CHOICE OF PARALLEL BACKEND")
if(BACKEND STREQUAL "OPENMP")
    find_package(OpenMP REQUIRED)
    target_link_libraries(heat3d-executors PUBLIC OpenMP::OpenMP_CXX)
    target_compile_definitions(heat3d-executors PUBLIC ENABLE_OPENMP THRUST_DEVICE_SYSTEM=THRUST_DEVICE_SYSTEM_OMP)
    if(${CMAKE_CXX_COMPILER_ID} STREQUAL NVHPC)
        target_compile_options(heat3d-executors PUBLIC -fast)
    endif()
endif()
