file(GLOB SOURCES "*.cpp")
add_executable(vlp4d-stdpar ${SOURCES})

set(BACKEND AUTO CACHE STRING "CHOICE OF PARALLEL BACKEND")
if(BACKEND STREQUAL "CUDA")
    target_compile_options(vlp4d-stdpar PUBLIC -stdpar=gpu)
    target_link_options(vlp4d-stdpar PUBLIC -stdpar=gpu -cudalib=cufft,cublas)
elseif(BACKEND STREQUAL "OPENMP")
    target_compile_options(vlp4d-stdpar PUBLIC -stdpar=multicore)
    target_compile_definitions(vlp4d-stdpar PUBLIC SIMD)
else()
    message(FATAL_ERROR "No parallel backend specified. One of CUDA, and OPENMP must be On.")
endif()

target_link_libraries(vlp4d-stdpar PUBLIC math_lib)
