file(GLOB SOURCES "*.cpp")
add_executable(vlp4d-thrust ${SOURCES})

set(BACKEND AUTO CACHE STRING "CHOICE OF PARALLEL BACKEND")
if(BACKEND STREQUAL "CUDA")
    target_link_libraries(vlp4d-thrust PUBLIC Threads::Threads STDEXEC::stdexec STDEXEC::nvexec)
    target_compile_features(vlp4d-thrust PUBLIC cxx_std_20)
elseif(BACKEND STREQUAL "OPENMP")
    target_link_libraries(vlp4d-thrust PUBLIC Threads::Threads STDEXEC::stdexec STDEXEC::nvexec)
    target_compile_options(vlp4d-thrust PUBLIC ${OpenMP_CXX_FLAGS})
    target_compile_features(vlp4d-thrust PUBLIC cxx_std_20)
elseif(BACKEND STREQUAL "HIP")
    target_compile_features(vlp4d-thrust PUBLIC cxx_std_20)
    target_compile_options(vlp4d-thrust PUBLIC -std=c++20)
else()
    message(FATAL_ERROR "No parallel backend specified. One of CUDA, HIP and OPENMP must be On.")
endif()
target_link_libraries(vlp4d-thrust PUBLIC math_lib)
